simplify method calls and improve readability